Update base docker image